--- a/src/components/investor/banner/index.pug
+++ b/src/components/investor/banner/index.pug
@@ -3,6 +3,8 @@ section.banner.banner-investor
         img(src="./images/investor/banner.png", alt="")
     .banner-mobile
         img(src="./images/investor/banner-mb.png", alt="")
-    //- .left-info
-    //-     h1.banner-title Câu hỏi thường gặp 
-    //-     p.banner-description Tham khảo và tìm đáp án cho các câu hỏi thường gặp mà ngân hàng HDBank đã tổng hợp sẵn cho quý khách!
+    .info-box-container
+        .container
+            .info-box
+                a(href="")
+                    h1.banner-title Báo cáo kết quả hoạt động kinh doanh quý
