--- a/src/components/investor/box-3/style.sass
+++ b/src/components/investor/box-3/style.sass
@@ -9,12 +9,12 @@
                 padding: 0
                 max-width: 1024px
                 margin: 0 auto
-                @media screen and ( max-width: 575.98px ) 
+                @media screen and ( max-width: 575.98px )
                     width: 100% !important
                     margin-bottom: 0
                 .item-news
                     margin-bottom: 30px
-                    display: flex;
+                    display: flex
                     color: inherit
                     .news-left-box
                         margin-right: 20px
@@ -23,12 +23,12 @@
                             +img-ratio(98/98)
                             img
                                 border-radius: 8px
-                        @media screen and ( max-width: 575.98px ) 
+                        @media screen and ( max-width: 575.98px )
                             width: 64px !important
                             margin-right: 15px !important
                     .news-right-box
                         max-width: calc(100% - 118px)
-                        a 
+                        a
                             color: inherit
                         @media screen and ( max-width: 575.98px )
                             max-width: calc(100% - 90px) !important
@@ -47,7 +47,7 @@
                                 font-size: 0.875rem !important
                                 line-height: 1.3rem !important
                                 -webkit-line-clamp: 2 !important
-                        .news-description 
+                        .news-description
                             font-size: 1.25rem
                             line-height: 29px
                             margin-bottom: 8px
@@ -59,7 +59,7 @@
                             display: -webkit-box
                             @media screen and ( max-width: 575.98px )
                                 display: none
-                        .news-date 
+                        .news-date
                             color: #6F7279
                             margin: 0
                             @media screen and ( max-width: 575.98px )
@@ -107,24 +107,24 @@
                     &.active
                         border: none
                         background: linear-gradient(259.71deg, #FFDE01 7.83%, #FAA71A 100%)
-        .paging-box 
+        .paging-box
             display: flex
             justify-content: center
             align-items: center
-            * 
+            *
                 margin: 0 5px
                 @media screen and ( max-width: 575.98px )
                     margin: 0 2px
-            .number-box 
+            .number-box
                 margin: 0
                 padding: 0
                 display: flex
                 align-items: center
                 .number-text
-                    border: 1px solid #DDE1EB;
-                    box-sizing: border-box;
-                    border-radius: 8px;
-                    padding: 5px 12px;
+                    border: 1px solid #DDE1EB
+                    box-sizing: border-box
+                    border-radius: 8px
+                    padding: 5px 12px
                     margin: 0 10px
                     cursor: pointer
                     &:hover
