--- a/src/components/investor/banner/style.sass
+++ b/src/components/investor/banner/style.sass
@@ -23,7 +23,7 @@
             bottom: 50px
             a
                 color: white
-            @media screen and ( min-width: 576px )
+            @media screen and ( max-width: 576px )
                 bottom: 20px
                 .banner-title
                     font-size: 1rem
