--- a/src/components/home/h-4/h-4.sass
+++ b/src/components/home/h-4/h-4.sass
@@ -145,7 +145,7 @@
 		justify-content: space-between
 		.item
 			width: 84px
-			height: 84px
+			min-height: 150px
 			a
 				width: 82px
 				height: 82px
