--- a/src/components/news/content/style.sass
+++ b/src/components/news/content/style.sass
@@ -3,7 +3,7 @@
     margin: 50px auto 40px
     position: relative
     background: #FFFFFF
-    @media screen and ( max-width: 1024px ) 
+    @media screen and ( max-width: 1024px )
         width: 80%
     @media screen and ( max-width: 575.98px )
         width: 90%
@@ -11,12 +11,12 @@
         margin: 30px auto 0px
         background: white
     .container-fluid
-        @media screen and ( max-width: 575.98px ) 
+        @media screen and ( max-width: 575.98px )
             padding: 0
         .news-search-box
             .page-title
                 display: none
-                @media screen and ( max-width: 575.98px ) 
+                @media screen and ( max-width: 575.98px )
                     font-weight: bold
                     font-size: 22px
                     line-height: 32px
@@ -27,14 +27,14 @@
                 display: flex
                 flex-direction: column
                 align-items: center
-                @media screen and ( max-width: 575.98px ) 
+                @media screen and ( max-width: 575.98px )
                     margin-bottom: 10px
                 .form-group
                     position: relative
                     margin-left: 8px
                     margin-bottom: 20px
                     width: 60%
-                    @media screen and ( max-width: 575.98px ) 
+                    @media screen and ( max-width: 575.98px )
                         width: 100%
                     &:first-child
                         margin-left: 0
@@ -44,9 +44,9 @@
                         height: 48px
                         border-radius: 50px
                         border: 0
-                        background: #F9FAFC;
+                        background: #F9FAFC
                         &:hover
-                            box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15);
+                            box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15)
                     button
                         position: absolute
                         top: 50%
@@ -68,31 +68,32 @@
             flex-direction: column
             align-items: center
             display: none
-            @media screen and ( max-width: 575.98px ) 
+            @media screen and ( max-width: 575.98px )
                 margin-top: 35px
             .list-news
                 padding: 0
                 max-width: 1040px
-                @media screen and ( max-width: 575.98px ) 
+                @media screen and ( max-width: 575.98px )
                     width: 100% !important
                     margin-bottom: 0
                 .item-news
                     margin-bottom: 30px
-                    display: flex;
+                    display: flex
                     color: inherit
                     .news-left-box
                         margin-right: 20px
-                        width: 98px
+                        max-width: 170px
+                        width: 100%
                         a
-                            +img-ratio(98/98)
+                            +img-ratio(98/170)
                             img
                                 border-radius: 8px
-                        @media screen and ( max-width: 575.98px ) 
+                        @media screen and ( max-width: 575.98px )
                             width: 64px !important
                             margin-right: 15px !important
                     .news-right-box
                         max-width: calc(100% - 118px)
-                        a 
+                        a
                             color: inherit
                         @media screen and ( max-width: 575.98px )
                             max-width: calc(100% - 90px) !important
@@ -111,7 +112,7 @@
                                 font-size: 0.875rem !important
                                 line-height: 1.3rem !important
                                 -webkit-line-clamp: 2 !important
-                        .news-description 
+                        .news-description
                             font-size: 1.25rem
                             line-height: 29px
                             margin-bottom: 8px
@@ -123,7 +124,7 @@
                             display: -webkit-box
                             @media screen and ( max-width: 575.98px )
                                 display: none
-                        .news-date 
+                        .news-date
                             color: #6F7279
                             margin: 0
                             @media screen and ( max-width: 575.98px )
