--- a/src/components/priority-user/content/style.sass
+++ b/src/components/priority-user/content/style.sass
@@ -25,10 +25,11 @@
                     // padding-top: 20px
                     .img-card
                         img
-                            transform: scale(1.5)
+                            transform: scale(1.3)
                             padding-bottom: 15px
+                            transition: all 0.3s ease-in-out
                     .title-card
-                        font-size: 1.6rem
+                        font-size: 1.2rem
                         font-weight: 700
                         @media ( max-width: 575.98px )
                             font-size: 0.8rem
@@ -36,7 +37,7 @@
                         .img-card
                             padding: 0 5px
                             img
-                                transform: scale(1.3)
+                                // transform: scale(1.3)
                                 padding-bottom: 10px
             .item-card
                 cursor: pointer
