--- a/src/components/maintenance/maintenance/style.sass
+++ b/src/components/maintenance/maintenance/style.sass
@@ -11,8 +11,15 @@
 
         .page-content
             .img
+                margin: 0 auto
+                width: 300px
+                height: 300px
                 text-align: center
                 margin-bottom: 8px
+                background-repeat: no-repeat
+                background-size: cover
+                background-blend-mode: multiply
+                mix-blend-mode: multiply
             .page-title
                 margin-bottom: 47px
                 h1
