--- a/src/components/personal/per-2/index.pug
+++ b/src/components/personal/per-2/index.pug
@@ -349,13 +349,23 @@
 							em.lnr.lnr-chevron-down
 						ul
 							li
-								a(href="") 
-									p Vay phát triển kinh tế gia đình
-									em.lnr.lnr-chevron-right
-							li
-								a(href="") 
-									p Vay bổ sung vốn lưu động
-									em.lnr.lnr-chevron-right
+								.content
+									a(href="") 
+										p lv3
+									em.lnr.lnr-chevron-down
+								ul
+									li
+										a(href="") 
+											p Vay phát triển kinh tế gia đình
+											em.lnr.lnr-chevron-right
+									li
+										a(href="") 
+											p Vay bổ sung vốn lưu động
+											em.lnr.lnr-chevron-right
+									li
+										a(href="") 
+											p Vay bổ sung vốn lưu động
+											em.lnr.lnr-chevron-right
 					li
 						.content
 							a(href="") 
