--- a/src/components/maintenance/maintenance/index.pug
+++ b/src/components/maintenance/maintenance/index.pug
@@ -4,7 +4,7 @@ section.maintenance-section
             img(src="./images/Logo.png", alt="")
         .page-content 
             .img 
-                img(src="./images/maintenance.png", alt="")
+                img(src="./images/maintenance.gif", alt="")
             .page-title 
                 h1 Website đang bảo trì
             .page-content 
