--- a/src/components/maintenance/maintenance/style.sass
+++ b/src/components/maintenance/maintenance/style.sass
@@ -1,6 +1,8 @@
 .maintenance-section 
     padding-top: 35px
     padding-bottom: 135px
+    background: url(../../../images/background_maintenance.png)
+    background-size: cover
     .page-container
         display: flex
         align-items: center
@@ -41,6 +43,8 @@
         padding-top: 29px
         padding-left: 37px
         padding-right: 37px
+        background: url(../../../images/background_maintenance_mb.png)
+        background-size: cover
         .page-container
             .logo
 
