--- a/src/components/about/administration/index.pug
+++ b/src/components/about/administration/index.pug
@@ -2,7 +2,7 @@ section.section.administrator
     .container
         h2.title.title_big.title_big-black.text-center Cơ cấu quản trị ngân hàng
         .tabs
-            ul.tab-list.d-flex
+            ul.tab-list-component.d-flex
                 li.active(rel="panel-1") Hội đồng quản trị
                 li(rel="panel-2") Ban điều hành
                 li(rel="panel-3") Cơ cấu tổ chức
