--- a/src/components/home/h-5/h-5.pug
+++ b/src/components/home/h-5/h-5.pug
@@ -9,6 +9,8 @@ section.section.banner-innerhome
 					.image.mobile
 						a(href="") 
 							img(src="./images/promotion.png", alt="")
+					a.btn-detail(href="") 
+						p Chi tiết
 			.swiper-slide
 				.swiper-inner
 					.image.desktop
@@ -17,6 +19,8 @@ section.section.banner-innerhome
 					.image.mobile
 						a(href="") 
 							img(src="./images/promotion-1.png", alt="")
+					a.btn-detail(href="") 
+						p Chi tiết
 		.swiper-pagination
 		.swiper-button-next
 		.swiper-button-prev
