--- a/src/components/_core/button.sass
+++ b/src/components/_core/button.sass
@@ -215,3 +215,28 @@
 .btn-view-all
 	border: 0
 	margin-top: 18px
+.btn-detail
+	margin-top: 24px
+	display: flex
+	justify-content: center
+	align-items: center
+	padding: 16px 24px
+	width: max-content
+	height: 58px
+	border-radius: 50px
+	border: 1px solid #333333
+	p
+		font-weight: bold
+		font-size: 18px
+		line-height: 26px
+		color: #333333
+
+	&::before
+		content: '\f1df'
+		font-family: Material Icons
+		padding-top: 3px
+		padding-right: 13px
+		color: $black
+	@media screen and ( max-width: 1366px )
+		height: 48px
+		padding: 16px
