--- a/src/components/home/h-5/h-5.sass
+++ b/src/components/home/h-5/h-5.sass
@@ -13,6 +13,15 @@
 				&.mobile
 					a
 						+img-ratio(512/375)
+			.btn-detail
+				position: absolute
+				bottom: 120px
+				left: 16.7%
+				@media screen and ( max-width: 575.98px )
+					bottom: auto
+					left: auto
+					right: 20px
+					top: 30%
 			.wrap-content
 				position: absolute
 				top: 50%
@@ -72,7 +81,7 @@
 				&:focus
 					outline: none !important
 				&-active
-					background: #333 !important
+					background: $main !important
 					&:focus
 						outline: none !important
 			@media screen and ( max-width: 1024px )
@@ -82,8 +91,7 @@
 				&-bullet
 					width: 10px
 					height: 10px
-					&-active
-						background: $main !important
+					
 
 		.swiper-button-next,
 		.swiper-button-prev
@@ -98,6 +106,7 @@
 			left: 40px !important
 
 	.endo-wrap
+		padding: 1rem 0
 		position: relative
 		.title-wrap
 			margin: 0 30px
@@ -136,6 +145,7 @@
 			margin: 0 auto
 			max-width: 1280px
 			.swiper-container
+				padding: 1rem
 			.slide-inner
 				position: relative
 				background: $white
@@ -144,7 +154,7 @@
 				border: 1px solid $tran
 				transition: all ease-in-out .3s
 				a
-					min-height: 205px
+					min-height: 213px
 					display: flex
 					justify-content: space-between
 					flex-direction: column
@@ -202,22 +212,3 @@
 				background: linear-gradient(90deg, rgba(255, 255, 255, 0) -18.99%, #FFFFFF 49.64%)
 				@media screen and ( max-width: 768px )
 					display: none
-.btn-detail
-	margin-top: 24px
-	display: flex
-	justify-content: center
-	align-items: center
-	padding: 16px 24px
-	width: 146px
-	height: 58px
-	border: 1px solid #333333
-	border-radius: 50px
-	color: $black
-	&::before
-		content: '\f1df'
-		font-family: Material Icons
-		padding-top: 3px
-		padding-right: 13px
-	@media screen and ( max-width: 1366px )
-		height: 48px
-		padding: 0 16px
