--- a/src/components/tool/suggest-products/index.pug
+++ b/src/components/tool/suggest-products/index.pug
@@ -20,7 +20,7 @@ section.section.suggest-product
 .banner-menber
     .big-banner_desktop 
         img(src="./images/promotion/banner-sign.png", alt="")
-        a.btn-login(href="")
-            p Đăng ký ngay
+        //- a.btn-login(href="")
+        //-     p Đăng ký ngay
     .big-banner_mobile 
         img(src="./images/promotion/banner-sign-mb.png", alt="")
