--- a/src/components/_core/animation.sass
+++ b/src/components/_core/animation.sass
@@ -10,9 +10,9 @@
 		opacity: 0.35
 	100%
 		opacity: 1
-.zoom-img
+.animation
 	transition: all 1s cubic-bezier(.22, .44, 0, 1)
-	.item-img, .img
+	.animation_img
 		position: relative
 		overflow: hidden
 		cursor: pointer
