--- a/src/components/about/vision-hdbank/index.pug
+++ b/src/components/about/vision-hdbank/index.pug
@@ -5,19 +5,19 @@ section.section.about-content
                 .swiper-container
                     .swiper-wrapper 
                         .swiper-slide 
-                            .item-vision
+                            .item-vision.item-vision__block1
                                 h2.item-title Tầm nhìn HDBankent 
                                 .info-box
                                     p Trở thành một tập đoàn tài chính hàng đầu với cốt lõi là NGÂN HÀNG THƯƠNG MẠI thuộc TOP DẪN ĐẦU TẠI VIỆT NAM, có sản phẩm và dịch vụ khách hàng vượt trội, mạng lưới quốc tế, hoạt động hiệu quả và có thương hiệu được các khách hàng tự hào tin dùng.
                         .swiper-slide 
-                            .item-vision
+                            .item-vision.item-vision__block2
                                 h2.item-title Sứ mệnh HDBank
                                 .info-box 
                                     p Đối với khách hàng: HDBank cam kết mang lại giá trị cao nhất cho khách hàng bằng các giải pháp tài chính trọn gói và sáng tạo, đáp ứng được nhu cầu đa dạng và luôn thay đổi dựa trên sự thấu hiểu của khách hàng.
                                     p Đối với nhân viên: HDBank tạo ra một môi trường làm việc chuyên nghiệp, thú vị và có mức đãi ngộ xứng đáng giúp nhân viên có thể học hỏi, sáng tạo và cống hiến để cùng thành đạt về sự nghiệp.
                                     p Đối với đối tác: HDBank cam kết tối đa hóa lợi ích cho cổ đông và các đối tác nhờ tăng trưởng mạnh và bền vững đi cùng với hệ thống quản trị doanh nghiệp hiệu quả và quản lý rủi ro chặt chẽ.
                         .swiper-slide 
-                            .item-vision
+                            .item-vision.item-vision__block3
                                 h2.item-title Giá trị cốt lõi
                                 .info-box 
                                     p Khách hàng là trọng tâm: HDBank luôn coi khách hàng là trọng tâm trong mọi hoạt động của ngân hàng và luôn phấn đấu đáp ứng tốt nhất những mong đợi của khách hàng;
