--- a/src/components/chat/chat_test.sass
+++ b/src/components/chat/chat_test.sass
@@ -389,6 +389,7 @@ input:focus
 strong
 	font-family: "SF-Pro-Text-Bold"
 .content-chat
+	display: block
 	.title
 		background: $main !important
 		padding: 16px !important
