--- a/src/components/detail-insurance/content/index.pug
+++ b/src/components/detail-insurance/content/index.pug
@@ -1,5 +1,9 @@
 section.section.wrapper-insurance 
     .container 
+        h1.title.title_small.title_small-black Title sản phẩm 
+        .desc-wrap 
+            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Est et autem labore culpa commodi quidem nam iusto doloribus aliquam. Alias itaque corrupti vitae beatae expedita molestias incidunt tempore deleniti quod.
+
         .wrapper-container 
             .row
                 .col-12.col-md-6.col-xl-6 
@@ -52,4 +56,16 @@ section.section.wrapper-insurance
                                 ul 
                                     li 
                                         p Quy tắc sản phẩm Bảo hiểm hỗ trợ điều trị bệnh ung thư (K-CARE)
+            .row    
+                .col-12.col-md-12.col-xl-12
+                    .wrap-item_full 
+                        .wrap-item_full__img 
+                            img(src="./images/insurance-detail/list-1.png", alt="")
+                        .wrap-item_full__content
+                            .wrap-item_full__content-title 
+                                p Đặc tính và Tiện ích
+                            .wrap-item_full__content-desc
+                                ul 
+                                    li 
+                                        p Chấp nhận kết quả chẩn đoán ung thư trên toàn cầu, hỗ trợ điều trị ung thư, chương trình bảo hiểm vượt trội với tổng quyền lợi bảo hiểm lên đến hơn 300% số tiền bảo hiểm.
                 
