--- a/src/components/home/h-5/h-5.pug
+++ b/src/components/home/h-5/h-5.pug
@@ -1,4 +1,4 @@
-section.section.banner-innerhome 
+section.section.banner-innerhome.reveal
 	.swiper-container.big-banner
 		.swiper-wrapper 
 			.swiper-slide
