--- a/src/components/home/h-6/h-6.pug
+++ b/src/components/home/h-6/h-6.pug
@@ -1,4 +1,4 @@
-section.section.digital-store 
+section.section.digital-store.reveal
 	.digital-search 
 		.container 
 			form.form-search(action="", method="post") 
