--- a/src/components/home/h-8/h-8.pug
+++ b/src/components/home/h-8/h-8.pug
@@ -1,4 +1,4 @@
-section.section.new-hdbank 
+section.section.new-hdbank.reveal
 	.container 
 		h2.title.title_big.title_big-black Bản tin HDBank
 		.new-slide
