--- a/src/components/home/h-9/h-9.pug
+++ b/src/components/home/h-9/h-9.pug
@@ -1,4 +1,4 @@
-section.section.util-tool
+section.section.util-tool.reveal
 	.container 
 		h2.title.title_big.title_big-black Tiện ích
 		#util-wrap
