--- a/src/components/personal/per-1/index.pug
+++ b/src/components/personal/per-1/index.pug
@@ -1,6 +1,70 @@
-section.section.pro-personal 
+.menu-product-wrapper
+    .container 
+        .menu-product
+            .menu-product__type
+                .component-slider  
+                    .slider-container
+                        ul.slider-content.d-flex.align-center
+                            li.slider-content__item
+                                a(href="")
+                                    p Sản phẩm tiền gửi
+                            li.slider-content__item
+                                a(href="")
+                                    p Sản phẩm vay
+                            li.slider-content__item
+                                a(href="")
+                                    p Thẻ
+                            li.slider-content__item
+                                a(href="")
+                                    p Ngân hàng điện tử
+                            li.slider-content__item
+                                a(href="")
+                                    p Bảo hiểm 
+                            li.slider-content__item
+                                a(href="")
+                                    p Sản phậm dịch vụ
+        .menu-product-detail
+            .row 
+                .menu-product-detail__categories.col-sm-12.col-md-9.col-xl-9 
+                    .row 
+                        .menu-category.col-md-3.col-xl-3
+                            a.link-title(href="") Tiền gửi thanh toán
+                            .menu-category__content
+                                ul 
+                                    li 
+                                        a(href="") Tiền gửi thanh toán 
+                                    li 
+                                        a(href="") Tiền gửi thanh toán ISMART 
+                                    li 
+                                        a(href="") TK TGTT chi lương
+                            a.expand-button(href="")
+                                p Xem thêm
+                        .menu-category.col-md-3.col-xl-3
+                            a.link-title(href="") Tiền gửi tiết kiệm
+                            .menu-category__content
+                                ul 
+                                    li 
+                                        a(href="") Tiết kiệm không kỳ hạn
+                                    li 
+                                        a(href="") Tiết kiệM lĩnh lãi cuối kỳ
+                                    li 
+                                        a(href="") Tiết kiệm lĩnh lãi định kỳ
+                            a.expand-button(href="")
+                                p Xem thêm
+                .menu-product-detail__featured.col-sm-12.col-md-3.col-xl-3
+                    .item-featured
+                        a(href="")
+                            img(src="./images/featured.jpg", alt="") 
+                        .item-featured_content 
+                            a(href="")
+                                p Cùng HDBank 'Vui tết sum vầy - Đong đầy tiền tỷ'
+                            a.btn-login(href="")
+                                p Xem ngay 
+section.section.pro-personal
     .container 
         .wrapper-container 
             h1.title.title_small-black Sản phẩm cá nhân
             .wrapper-container_content 
-                p Với hệ sinh thái độc đáo, HDBank cung cấp đa dạng các sản phẩm, dịch vụ đáp ứng nhu cầu của từng cá nhân riêng biệt, hộ gia đình hay hộ kinh doanh vừa và nhỏ trên khắp cả nước; không ngừng đổi mới, phát triển để ngày một hoàn thiện hơn, đảm bảo khách hàng luôn có một trải nghiệm hoàn hảo nhất.
+                p Với hệ sinh thái độc đáo, HDBank cung cấp đa dạng các sản phẩm, dịch vụ đáp ứng nhu cầu của từng cá nhân riêng biệt, 
+                    |hộ gia đình hay hộ kinh doanh vừa và nhỏ trên khắp cả nước; không ngừng đổi mới, phát triển để ngày một hoàn thiện hơn, 
+                    |đảm bảo khách hàng luôn có một trải nghiệm hoàn hảo nhất.
