--- a/src/components/promotion-detail/content/index.pug
+++ b/src/components/promotion-detail/content/index.pug
@@ -37,6 +37,8 @@ section.section.promotion-detail
 				|có tổng doanh số giao dịch hợp lệ cao nhất trên App HDBank vào ngày 
 				b 20/10. 
 			p Chương trình như lời tri ân, thể hiện cam kết luôn mang đến lợi ích cao nhất của HDBank đến toàn thể Quý Khách hàng.
+			table 
+				
 			h3 ♦️ ĐIỀU KIỆN CHUNG
 			p -  Khách hàng có tài khoản thanh toán thực hiện giao dịch tài chính hợp lệ trên App HDBank 
 
@@ -47,6 +49,21 @@ section.section.promotion-detail
 			p * Từ 07h-23h59 ngày 18/10/2021 - Áp dụng cho giao dịch Thanh toán hóa đơn sinh hoạt 
 			p * Từ 07h-23h59 ngày 19/10/2021 - Áp dụng cho giao dịch Thanh toán QRCode 
 			p * Từ 07h-23h59 ngày 20/10/2021 - Áp dụng cho giao dịch Nạp tiền điện thoại, Thanh toán hóa đơn, Thanh toán QRCode 
+			table
+				thead
+					tr
+						th Ưu đãi
+						th Số lượng ngoại tệ
+						th Loại tiền
+				tbody
+					tr
+						td +20 đồng
+						td Nhỏ hơn 100.000
+						td USD hoặc ngoại tệ khác tương đương
+					tr
+						td +30 đồng
+						td Từ 100.000 đến dưới 200.000
+						td USD hoặc ngoại tệ tương đương
 
 			h4 -  Đối với Ưu đãi 2: 
 			p + Mỗi TKTT/CIF chỉ nhận được khuyến mại 1 lần duy nhất vào ngày 20/10. 
