--- a/src/components/home/h-3/h-3.pug
+++ b/src/components/home/h-3/h-3.pug
@@ -1,4 +1,4 @@
-section.section.customer(setBackground="./images/bg-2.jpg")
+section.section.customer(setBackground="./images/bg-2.jpg").reveal
 	.container 
 		h2.title.title_small.title_small-white Khách hàng cá nhân
 		.block-desktop
