--- a/src/components/personal/per-3/style.sass
+++ b/src/components/personal/per-3/style.sass
@@ -39,3 +39,11 @@
         .card-product-promotion
             .tag-list
                 padding-left: 0
+.reveal
+    position: relative
+    transform: translateX(150px)
+    opacity: 0
+    transition: 1s all ease
+    &.active
+        transform: translateX(0)
+        opacity: 1
