--- a/src/components/promotion-detail/content/style.sass
+++ b/src/components/promotion-detail/content/style.sass
@@ -24,6 +24,17 @@
         p
             a
                 color: $main
+        table
+            width: 100%
+            margin: 16px 0
+            border-collapse: collapse
+            tr
+                line-height: 50px
+                td,
+                th
+                    padding-left: 16px
+        table, td, th
+            border: 1px solid black
     .socail-list
         margin-top: 40px
         margin-bottom: 34px
