--- a/src/components/personal/per-1/style.sass
+++ b/src/components/personal/per-1/style.sass
@@ -1,14 +1,41 @@
+.menu-product-wrapper
+	background: #F9FAFC
+	box-shadow: 1.5px 1.5px 6px rgba(0, 0, 0, 0.07)
+	.component-slider
+		width: 100%
+		position: relative
+		z-index: 1001
+		display: flex
+		align-items: center
+		justify-content: space-around
+		.slider-container
+			.slider-content
+				padding-left: 0
+				margin-bottom: 0
+				&__item
+					a
+						display: block
+						padding: 25px 0
+						p
+							font-weight: bold
+							font-size: 20px
+							color: #333333
+					.menu-product-detail
+						display: none
+				.slider-content__item + .slider-content__item
+					margin-left: 32px
+
 .pro-personal
-    padding-top: 16px
-    .wrapper-container
-        max-width: 842px
-        width: 100%
-        margin: 0 auto
-        &_content
-            p
-                text-align: center
-                font-size: 20px
-                line-height: 29px
-            @media screen and ( max-width: 768.98px )
-                p
-                    font-size: 14px
+	padding-top: 16px
+	.wrapper-container
+		max-width: 842px
+		width: 100%
+		margin: 0 auto
+		&_content
+			p
+				text-align: center
+				font-size: 20px
+				line-height: 29px
+			@media screen and ( max-width: 768.98px )
+				p
+					font-size: 14px
